added bungeecord support, refactored

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
-main: de.raidcraft.rcwarn.RCWarn
+main: de.raidcraft.rcwarn.RCWarnPlugin
 name: RCWarn
 version: ${project.version}#${build.number}
 description: Warn and ban system
 author: Strasse36
 website: http://www.raid-craft.de
-depend: [RaidCraft-API]
+depend: [RaidCraft-API RCMultiWorld]
