--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,10 @@
             <artifactId>raidcraft-api</artifactId>
             <version>1.4-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>de.raidcraft</groupId>
+            <artifactId>rcmultiworld</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
