--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <groupId>de.raidcraft</groupId>
     <artifactId>rcwarn</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.5-SNAPSHOT</version>
     <name>RCWarn</name>
 
     <scm>
@@ -41,19 +41,19 @@
     <parent>
         <groupId>de.raidcraft</groupId>
         <artifactId>masterpom</artifactId>
-        <version>2.6-SNAPSHOT</version>
+        <version>LATEST</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>de.raidcraft</groupId>
             <artifactId>raidcraft-api</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>de.raidcraft</groupId>
             <artifactId>rcmultiworld</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
 </project>
