--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
     <version>1.1.5-SNAPSHOT</version>
     <name>RCWarn</name>
 
+    <scm>
+        <developerConnection>scm:git:ssh://git@git.raid-craft.de:22109/rcwarn.git</developerConnection>
+    </scm>
+
     <parent>
         <groupId>de.raidcraft</groupId>
         <artifactId>masterpom</artifactId>
