--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses />.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.raidcraft</groupId>
     <artifactId>rcwarn</artifactId>
@@ -26,19 +27,19 @@
 
     <scm>
         <developerConnection>scm:git:ssh://git@git.raid-craft.de:22109/raid-craft-de/rcwarn.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <parent>
         <groupId>de.raidcraft</groupId>
         <artifactId>masterpom</artifactId>
-        <version>RELEASE</version>
+        <version>3.4.14-develop-SNAPSHOT</version>
     </parent>
 
     <repositories>
         <repository>
             <id>raidcraft</id>
-            <url>http://nexus.raid-craft.de/content/groups/public/</url>
+            <url>http://repo.raid-craft.eu/artifactory/repo/</url>
         </repository>
     </repositories>
 
@@ -46,12 +47,12 @@
         <dependency>
             <groupId>de.raidcraft</groupId>
             <artifactId>raidcraft-api</artifactId>
-            <version>${rc.version}</version>
+            <version>1.4.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.raidcraft</groupId>
             <artifactId>rcmultiworld</artifactId>
-            <version>${rc.version}</version>
+            <version>1.1.6-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
