Updated masterpom reference to LATEST (5.2.0) (MC 1.10)

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <parent>
         <groupId>de.raidcraft</groupId>
         <artifactId>masterpom</artifactId>
-        <version>5.1.0-SNAPSHOT</version>
+        <version>LATEST</version>
     </parent>
 
     <repositories>
